<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lexica</string>
    <string name="new_game">New Game</string>
    <string name="restore_game">Restore Game</string>
    <string name="prefs">Preferences</string>
    <string name="pref_dict">Lexicon</string>
    <string name="pref_dict_br_no_diacritics" tools:keep="@string/pref_dict_br">Breton</string>
    <string name="pref_dict_ca" tools:keep="@string/pref_dict_ca">Catalan</string>
    <string name="pref_dict_de_DE" tools:keep="@string/pref_dict_de_DE">German (Extended)</string>
    <string name="pref_dict_de_DE_description" tools:keep="@string/pref_dict_de_DE_description">Includes diacritics: äöü</string>
    <string name="pref_dict_de_DE_no_diacritics" tools:keep="@string/pref_dict_de_DE_no_diacritics">German</string>
    <string name="pref_dict_es" tools:keep="@string/pref_dict_es">Spanish</string>
    <string name="pref_dict_es_description" tools:keep="@string/pref_dict_es_description">Includes diacritics: áéíóúüñ</string>
    <string name="pref_dict_es_solo_enne" tools:keep="@string/pref_dict_es_solo_enne">Spanish only Ñ</string>
    <string name="pref_dict_es_solo_enne_description" tools:keep="@string/pref_dict_es_solo_ennedescription">Includes ñ but no accents</string>
    <string name="pref_dict_fa" tools:keep="@string/pref_dict_fa">Persian</string>
    <string name="pref_dict_fi" tools:keep="@string/pref_dict_fi">Finnish</string>
    <string name="pref_dict_fr_FR" tools:keep="@string/pref_dict_fr_FR">French (Extended)</string>
    <string name="pref_dict_fr_FR_description" tools:keep="@string/pref_dict_fr_FR_description">Includes diacritics: àâçéèêëîïôöûü</string>
    <string name="pref_dict_fr_FR_no_diacritics" tools:keep="@string/pref_dict_fr_FR_no_diacritics">French</string>
    <string name="pref_dict_hu" tools:keep="@string/pref_dict_hu">Hungarian</string>
    <string name="pref_dict_hr_HR" tools:keep="@string/pref_dict_hr">Croatian</string>
    <string name="pref_dict_it" tools:keep="@string/pref_dict_it">Italian</string>
    <string name="pref_dict_ja" tools:keep="@string/pref_dict_ja">Japanese</string>
    <string name="pref_dict_nl" tools:keep="@string/pref_dict_nl">Dutch</string>
    <string name="pref_dict_pl" tools:keep="@string/pref_dict_pl">Polish</string>
    <string name="pref_dict_pt_BR" tools:keep="@string/pref_dict_pt_BR">Portuguese (Brazil) (Extended)</string>
    <string name="pref_dict_pt_BR_description" tools:keep="@string/pref_dict_br_BR_description">Includes diacritics: çáéíóúâêôãõà and letters: kwy</string>
    <string name="pref_dict_pt_BR_no_diacritics" tools:keep="@string/pref_dict_pt_BR_no_diacritics">Portuguese (Brazil)</string>
    <string name="pref_dict_ru" tools:keep="@string/pref_dict_ru">Russian</string>
    <string name="pref_dict_ru_extended" tools:keep="@string/pref_dict_ru_extended">Russian (Extended)</string>
    <string name="pref_dict_ru_extended_description" tools:keep="@string/pref_dict_ru_extended_description">Includes grammar cases and abbreviations</string>
    <string name="pref_dict_tr" tools:keep="@string/pref_dict_tr">Turkish</string>
    <string name="pref_dict_en_GB" tools:keep="@string/pref_dict_en_GB">English (UK)</string>
    <string name="pref_dict_uk" tools:keep="@string/pref_dict_uk">Ukrainian</string>
    <string name="pref_dict_en_US" tools:keep="@string/pref_dict_en_US">English (US)</string>
    <string name="lexicon_is_in_beta">Beta</string>
    <string name="pref_boardSize">Board Size</string>
    <string name="pref_timeLimit">Time Limit</string>
    <string name="pref_scoreType">Scoring Type</string>
    <string name="pref_minWordLength">Min word length</string>
    <string name="word_length">Word Length</string>
    <string name="letter_points">Letter Points</string>
    <string name="pref_hintMode">Hint mode</string>
    <string name="pref_hintMode_summary">Shows the number of words each letter can be used in</string>
    <string name="tile_count">Number of words</string>
    <string name="hint_colour">Tile colour</string>
    <string name="pref_sounds">Sound Effects</string>
    <string name="dialog_refresh_title">Refresh board</string>
    <string name="dialog_refresh_content">To ensure you play the same board as your opponents, make sure to resend any invites after refreshing.</string>
    <string name="dialog_refresh_button">Refresh</string>
    <string name="dialog_refresh_confirmation_message">Board refreshed</string>
    <string name="dialog_about_title">About Lexica</string>
    <string name="dialog_about_content">
	Touch the screen and move your finger to adjacent squares to spell words.
	You have three minutes to find as many words as possible.

	\n\nScoring:
	\nOn 4x4 boards, words must be at least three letters long.  On 5x5 boards,
	words must be at least four letters long.
	Words that have three or four letters are worth one point.  Longer words
	are worth more points.  Proper nouns are not counted.\n\n
	</string>
    <string name="menu_rotate_board">Rotate Board</string>
    <string name="menu_save_game">Save Game</string>
    <string name="menu_end_game">End Game</string>
    <string name="button_ok">OK</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="about">About</string>
    <string name="show_missed">Show Missed Words</string>
    <string name="hide_missed">Hide Missed Words</string>
    <string name="show_unique">Show Unique Words</string>
    <string name="hide_unique">Hide Unique Words</string>
    <string name="view_word"><u>View</u></string>
    <string name="define_word"><u>Define</u> </string>
    <string name="words">Words</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="found_words">Found Words</string>
    <string name="missed_words">Missed Words</string>
    <string name="total_words">Total Words:</string>
    <string name="total_score">Total Score:</string>
    <string name="value_max_percentage">%1$d/%2$d (%3$d%%)</string>
    <string name="high_score">High Score</string>
    <string name="high_scores">High Scores</string>
    <string name="pref_resetScores">Reset High Scores</string>
    <string name="high_scores_reset">High scores have been reset.</string>
    <string name="reset_scores_prompt">Are you sure you want to reset all high scores for all game modes to zero? This cannot be undone.</string>
    <string name="pref_breakdown">Show Word Length Breakdown</string>
    <string name="pref_breakdown_summary">Whether or not the word count shows counts by word length</string>
    <string name="pref_definitionProvider">Definition Provider</string>
    <string name="pref_definitionProvider_summary">If the selected provider is not installed, an online source such as Wiktionary will be used.</string>
    <string name="pref_definitionProvider_dialog">Select Definition Provider</string>
    <string name="pref_definitionProvider_dictionaryProvider_online">Online</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_dialog">Select Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_high_contrast">High Contrast</string>
    <string name="sort">Sort</string>
    <string name="delete_custom_game_mode">Delete custom game mode \"%1$s\"? Any high scores will be lost.</string>
    <string name="input_game_mode_name_hint">Name</string>
    <string name="input_game_mode_name_description">For choosing game mode / recording high scores</string>
    <string name="input_game_mode_minutes_description">Time limit in minutes</string>
    <string name="menu_new_game_mode">New</string>
    <string name="menu_save_game_mode">Save</string>
    <string name="game_mode_sprint">Sprint</string>
    <string name="game_mode_sprint_description">Short game to find as many words as possible</string>
    <string name="game_mode_marathon">Marathon</string>
    <string name="game_mode_marathon_description">Try to find all words, without any time pressure</string>
    <string name="game_mode_beginner">Beginner</string>
    <string name="game_mode_beginner_description">Use hints to help find words</string>
    <string name="game_mode_letter_points">Letter Points</string>
    <string name="game_mode_letter_points_description">Score more points for using less common letters</string>
    <string name="game_mode_custom_description">Custom game mode</string>
    <string name="game_mode_legacy">Legacy</string>
    <string name="game_mode_legacy_description">Used in an earlier version of Lexica</string>
    <string name="error_restoring_game">Could not restore your game</string>
    <string name="whats_new_title">What\'s New</string>
    <string name="whats_new_continue">Continue</string>
    <string name="whats_new_sharing">Share a challenge!</string>
    <string name="whats_new_sharing_description">After finishing a game, you can now share that board with your friends and challenge them to beat your score.\n\nSimilar to multiplayer, but for that time when you\'ve just played a particularly interesting or challenging board layout that you think your friends will enjoy.\n\nAs always, <a href="https://github.com/lexica/lexica/issues">feedback is welcome</a> about how this feature can be improved.</string>
    <string name="whats_new_web_lexica">Introducing web Lexica!</string>
    <string name="whats_new_web_lexica_description">Special thanks to @MattRCole for such a huge effort bringing this to life!\n\nMultiplayer invites now include links to the new (beta) web version for those without Android devices. The QR code shown when starting a new multiplayer game can also show a URL to the web version.</string>
    <string name="whats_new_support">Support Lexica</string>
    <string name="whats_new_support_description">Lexica is and always will be free and open source.\n\nYou can show your support and contribute to its further development by donating via <a href="https://liberapay.com/Lexica">Liberapay</a> or <a href="https://github.com/sponsors/pserwylo">GitHub Sponsors</a>.</string>
    <string name="menu_view_found_words">View found words</string>
    <string name="multiplayer_lobby__join_when_ready">When all players are ready, join the game.</string>
    <string name="multiplayer_lobby__join_game">Join game</string>
    <string name="multiplayer__share_invites">Share Invites</string>
    <string name="multiplayer__toggle_qr_app">Show Android\nQR Code</string>
    <string name="multiplayer__toggle_qr_web">Show Web\nQR Code</string>
    <string name="multiplayer__start_when_ready">When all players are ready, you should all start the game at the same time.</string>
    <string name="multiplayer__qr_code__accessible_description">QR code: Others can scan to join this game</string>
    <string name="multiplayer__start_game">Start game</string>
    <string name="multiplayer__next_round">Next Round</string>
    <string name="multiplayer__start_next_round">Start Next Round</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="game_mode">Game mode</string>
    <string name="new_game_mode">New game mode</string>
    <string name="invalid_multiplayer_link">Received incorrect multiplayer/share link, cannot join game. Make sure both of you are using the latest version of Lexica.</string>
    <string name="dialog_end_game_confirm_title">End Game</string>
    <string name="dialog_end_game_confirm_message">Are you sure you want to end this game?</string>
    <string name="share">Share</string>
    <string name="back">Back</string>
    <string name="invite__multiplayer__description">You\'ve been invited to a multiplayer Lexica game:</string>
    <string name="invite__multiplayer__game_offline">Want to play offline? Try playing via pen and paper:</string>
    <string name="invite__challenge__description">I found %1$d words and scored %2$d points on this Lexica board, can you beat me?</string>
    <string name="invite__dont_have_lexica_installed">Don\'t have Lexica installed? Get it from https://play.google.com/store/apps/details?id=com.serwylo.lexica</string>
    <string name="invite__dont_have_lexica_installed_web">Or try out Lexica in the Browser (beta):</string>
    <string name="send_challenge_invite_to">Send challenge to…</string>
    <string name="send_multiplayer_invite_to">Send invite to…</string>
    <string name="time_limit_must_be_set">Time limit must be set</string>
    <string name="max_time_limit">Max time limit is 30 days (43200 minutes)</string>
    <string name="time_limit_too_short">Time limit too short</string>
    <plurals name="num_available_words_in_game__tap_to_refresh">
        <item quantity="one">%1$d word (tap to refresh)</item>
        <item quantity="other">%1$d words (tap to refresh)</item>
    </plurals>
    <plurals name="num_available_words_in_game">
        <item quantity="one">%1$d word</item>
        <item quantity="other">%1$d words</item>
    </plurals>
    <plurals name="num_found_words_out_of_total">
        <item quantity="one">%d / %d word</item>
        <item quantity="other">%d / %d words</item>
    </plurals>
    <plurals name="max_score_points_suffix">
        <item quantity="one">/ %d point</item>
        <item quantity="other">/ %d points</item>
    </plurals>
    <plurals name="num_minutes">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
</resources>
