<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="?attr/score__background_colour"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.appcompat.widget.Toolbar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:minHeight="?attr/actionBarSize"
		android:theme="?attr/actionBarTheme"
		app:popupTheme="?attr/actionBarPopupTheme"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:id="@+id/toolbar"
		app:title="@string/score"
		/>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/recycler_view"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@+id/button_wrapper_top"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/toolbar"
		tools:listitem="@layout/score_found_words" />

	<LinearLayout
		android:id="@+id/button_wrapper_top"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent">

		<com.google.android.material.button.MaterialButton
			android:id="@+id/found_words_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingTop="?attr/home__button_padding"
			android:paddingBottom="?attr/home__button_padding"
			app:layout_constraintWidth_percent="0.5"
			android:stateListAnimator="@null"
			app:backgroundTint="?attr/home__secondary_button_background"
			android:textAllCaps="false"
			app:cornerRadius="0dp"
			android:insetTop="0dp"
			android:insetBottom="0dp"
			android:paddingStart="2dp"
			android:paddingEnd="2dp"
			app:strokeWidth="2dp"
			app:strokeColor="?attr/home__secondary_button_border"
			app:icon="@drawable/circle_check_solid"
			app:iconTint="@color/white"
			app:iconSize="28dp"
			app:iconGravity="top"
			android:text="@string/found_words"
			android:textColor="?attr/home__secondary_button_text_colour"
			android:textSize="14sp" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/missed_words_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingTop="?attr/home__button_padding"
			android:paddingBottom="?attr/home__button_padding"
			app:layout_constraintWidth_percent="0.5"
			android:stateListAnimator="@null"
			app:backgroundTint="?attr/home__secondary_button_background"
			android:textAllCaps="false"
			app:cornerRadius="0dp"
			android:insetTop="0dp"
			android:insetBottom="0dp"
			android:paddingStart="2dp"
			android:paddingEnd="2dp"
			app:strokeWidth="2dp"
			app:strokeColor="?attr/home__secondary_button_border"
			app:icon="@drawable/circle_xmark_solid"
			app:iconTint="@color/white"
			app:iconSize="28dp"
			app:iconGravity="top"
			android:text="@string/missed_words"
			android:textColor="?attr/home__secondary_button_text_colour"
			android:textSize="14sp" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/multiplayer_next_round"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingTop="?attr/home__button_padding"
			android:paddingBottom="?attr/home__button_padding"
			android:visibility="visible"
			app:layout_constraintWidth_percent="0.5"
			android:stateListAnimator="@null"
			app:backgroundTint="?attr/home__secondary_button_background"
			android:textAllCaps="false"
			app:cornerRadius="0dp"
			android:insetTop="0dp"
			android:insetBottom="0dp"
			app:strokeWidth="2dp"
			app:strokeColor="?attr/home__secondary_button_border"
			app:icon="@drawable/circle_play_solid"
			app:iconTint="@color/white"
			app:iconSize="28dp"
			app:iconGravity="top"
			android:text="@string/multiplayer__next_round"
			android:textColor="?attr/home__secondary_button_text_colour"
			android:textSize="16sp" />

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
