...
			android:paddingEnd="2dp"
			android:insetTop="0dp"
			android:insetBottom="0dp"
			/>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/preferences"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingTop="?attr/home__button_padding"
			android:paddingBottom="?attr/home__button_padding"
			app:layout_constraintWidth_percent="0.34"
...
